Insert personal data to resume

--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -1,21 +1,46 @@
 \section*{Experience}
 
 \experience
-  {Lead}
-  {\href{https://developers.google.com/community/gdsc}{GDSC SJEC}}
-  {Mangaluru, India}
-  {July 2023 -- June 2024}
+  {DevOps Engineer}
+  {Hitachi Rail}
+  {Lisbon, Portugal}
+  {Sep 2023 --  Present}
   {
-    \item \textbf{Led} seminars and \textbf{study jams} to teach \textbf{100+ students} web programming, machine learning, cloud computing, and much more.
-    \item \textbf{Guided teams} through \textbf{real-world tech projects}, ensuring \textbf{timely delivery} and teaching \textbf{software development best practices}.
+    \item I developed and implemented a Kubernetes Platform to support our development team's applications, focusing on new features, updates, and bug fixes. I led the refactoring of version 6, enhancing the installation system and central repository framework. I earned the Certified Kubernetes Administrator (CKA) accreditation, demonstrating my expertise. I improved skills in managing Kubernetes clusters, RabbitMQ, Redis, PostgreSQL, and more. I delivered major platform releases, including version 5 and 6, significantly boosting reliability and functionality.
   }
 
 \experience
-  {Tech Intern}
-  {\href{https://headway.co.in/}{Headway}}
-  {Mangaluru, India}
-  {Feb 2024 -- May 2024}
+  {DevOps Engineer}
+  {Aubay Portugal}
+  {Lisbon, Portugal}
+  {May 2023 -- Present}
   {
-    \item Integrated a \textbf{secure payment gateway} and \textbf{RBAC} to \textbf{enhance user control} and \textbf{data protection}.
-    \item Designed and built a \textbf{user-friendly dashboard} and \textbf{landing page}, improving \textbf{UI/UX} for \textbf{functionality} and \textbf{engagement}.
+    \item Working as a contractor inside Hitachi Rails
+  }
+
+\experience
+  {DevOps Engineer}
+  {KaBuM!}
+  {São Paulo, Brazil}
+  {Nov 2021 --  May 2023}
+  {
+    \item As an Infrastructure Analyst with the DevOps team at KaBuM!, I implemented, developed, and maintained development and production environments. I collaborated with the order processing team to create CI/CD pipelines for microservices and maintained system tools. I led the infrastructure planning for integrating OpenFinance payment methods, starting with NuBank, ensuring cost-effective AWS service selection. I reduced system failures by implementing advanced monitoring and alerting with Prometheus, Grafana, and DataDog. I refined my skills in continuous integration and deployment using AWS CodePipeline and CodeBuild, infrastructure management with Terraform, and performance optimization with Nginx and AWS CloudFront. My work on the OpenFinance project increased net sales and enhanced the company's payment ecosystem.
+  }
+
+\experience
+  {DevOps Engineer}
+  {EZOps.Cloud}
+  {Rio de Janeiro, Brazil}
+  {Jun 2021 -- Nov 2021}
+  {
+    \item I developed comprehensive infrastructure solutions in AWS, focusing on CI/CD implementation, process automation, and documentation. I led the migration and automation of legacy systems to a scalable cloud infrastructure, using AWS services to create a robust CI/CD pipeline, improving deployment frequency and quality for four customers. I minimized downtime during upgrades with effective CI/CD strategies and real-time monitoring via CloudWatch and Slack. I expanded my expertise in AWS services like CloudFormation, CodePipeline, and RDS, and improved my server management and load balancing skills with AWS Application Load Balancer and Nginx. My contributions significantly enhanced infrastructure efficiency, boosting deployment speeds and reducing manual intervention, thereby increasing productivity.
+  }
+
+\experience
+  {DevOps Engineer}
+  {eLinke Tecnologia}
+  {São Paulo, Brazil}
+  {Feb 2021 -- Jun 2021}
+  {
+    \item As a Linux system administrator, I focused on building and maintaining infrastructure using Infrastructure as Code (IaC) in cloud environments and with virtual machines. I deployed IT infrastructure for a new web application, designing the cloud architecture with Terraform to ensure integration, automation, and scalability. My efficient implementation reduced incident response times and improved system stability and security, earning management accolades. I enhanced my automation skills with Ansible and Terraform, and expanded my cloud knowledge with Digital Ocean Cloud and network security through OpenVPN deployment. My contributions optimized IT infrastructure, increasing operational efficiency and reducing maintenance costs through IaC and process automation.
   }
