--- a/sections/header.tex
+++ b/sections/header.tex
@@ -1,10 +1,7 @@
 \begin{center}
-    \Huge \textbf{Anish Shobith P S} \\[5pt]
-    \large
-        \href{mailto:anish.shobith19@gmail.com}{anish.shobith19@gmail.com} |
-        \href{https://anishshobithps.com}{anishshobithps.com} |
-        \href{https://github.com/anishshobithps}{github.com/anishshobithps} \\[5pt]
-        \href{https://www.linkedin.com/in/anishshobithps}{linkedin.com/in/anishshobithps} |
-        \href{tel:+919448359948}{+91 9448359948}
+    \huge \textbf{Rafael Prata de Souza} \\[4pt]
+    \normalsize
+        \href{mailto:rafaelpratasouza@gmail.com}{rafaelpratasouza@gmail.com} |
+        \href{https://www.linkedin.com/in/rafael-prata-souza}{linkedin.com/in/rafael-prata-souza}
     \normalsize
 \end{center}
