--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,9 +1,10 @@
 \section*{Skills}
 
 \begin{itemize}
-    \item \skills{Languages}{JavaScript, TypeScript, HTML, CSS, Python, C, C++, LaTeX, Typst, Java, Dart}
-    \item \skills{Libraries \& Frameworks}{Next.js, TailwindCSS, React, Astro, Prisma, Hono, Express.js, Discord.js, Flutter}
-    \item \skills{Databases}{PostgreSQL, MySQL, SQLite, MongoDB}
-    \item \skills{Tools}{Node.js, Git, GitHub, Deno, Docker, Linux, CI/CD Pipelines, CMake}
-    \item \skills{API Development}{RESTful APIs, GraphQL, WebSockets}
+    \item \skills{Containerization and Orchestration}{Kubernetes, Docker}
+    \item \skills{Cloud Platforms}{AWS, Azure, DigitalOcean}
+    \item \skills{IaC}{Terraform, Ansible, Salt Stack, Pulumi, AWS CloudFormation}
+    \item \skills{Monitoring}{Prometheus, Grafana, CloudWatch, DataDog, New Relic}
+    \item \skills{CI/CD}{Jenkins, AWS CodePipeline, AWS CodeBuild, Gilab CI, Github Actions}
+    \item \skills{Databases}{PostgreSQL, MySQL, Redis}
 \end{itemize}
