--- a/main.tex
+++ b/main.tex
@@ -7,8 +7,8 @@
 \vspace{-14pt}
 \input{sections/skills}
 \vspace{-14pt}
-\input{sections/projects}
-\vspace{-14pt}
+% \input{sections/projects}
+% \vspace{-14pt}
 \input{sections/experience}
 \vspace{-14pt}
 \input{sections/education}
