--- a/sections/education.tex
+++ b/sections/education.tex
@@ -1,4 +1,4 @@
 \section*{Education}
 
-\education{B.E in Computer Science Engineering}{St Joseph Engineering College}{https://sjec.ac.in/}{May 2024}
+\education{Bachelor's Degree in Mathematics}{Instituto Federal de Educação, Ciência e Tecnologia de São Paulo - IFSP}{Jan 2017}
 
